# tailwindify

./: Cargo.toml  README.md
src/: error.rs  main.rs  rules.rs
test-folder/: test.vue
